cluster/apps/web/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: nginx
